bugfixes: double quotes and aligncenter

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: zeeDynamic
 Theme URI: http://themezee.com/themes/zeedynamic/
 Description: zeeDynamic is a fully responsive magazine WordPress theme with strong colors and bold fonts. The theme fits perfectly for any news, magazine or blog website with rich content. Due the mobile ready design the theme look good on any device. The highlight of zeeDynamic is the configurable magazine frontpage template which displays your posts within a featured post slider and several category post boxes. Of course there is support of all WordPress core features like custom menus, widgetized sidebars, custom background, custom headers and featured images. Check out the full demo on http://preview.themezee.com/zeedynamic/
-Version: 1.0.3
+Version: 1.0.4
 Author: ThemeZee
 Author URI: http://themezee.com
 Tags:  two-columns, light, red, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, flexible-width, one-column, left-sidebar, right-sidebar, three-columns, black, silver, orange, white, green, blue, purple, gray
@@ -782,7 +782,7 @@ article .wp-post-image {
 }
 .aligncenter {
 	margin: 1em auto; 
-	display: inline;
+	display: block;
 }
 
 /* Gallery Styling */
